--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Bibesh Dhital",
   "license": "ISC",
   "dependencies": {
+    "colors": "^1.4.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "http": "0.0.0",
