--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "express": "^4.17.1",
     "http": "0.0.0",
     "mongoose": "^5.8.9",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "node-geocoder": "^3.25.0",
+    "slugify": "^1.3.6"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
